fix:replace HADOOP_CONF_DIR WITH YARN_CONF_DIR in file hadoop/etc/hadoop/hadoop-env.sh